--- a/assignment-app-fronted/src/app/assignment/assignment.component.css
+++ b/assignment-app-fronted/src/app/assignment/assignment.component.css
@@ -15,7 +15,21 @@
   display: block;
 }
 
+/* .example-box {
+  border-bottom: solid 1px #ccc;
+  color: rgba(0, 0, 0, 0.87);
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  box-sizing: border-box;
+  cursor: move;
+  background: white;
+  font-size: 14px;
+} */
+
 .example-box {
+  padding: 20px 10px;
   border-bottom: solid 1px #ccc;
   color: rgba(0, 0, 0, 0.87);
   display: flex;
@@ -53,4 +67,28 @@
 }
 .ml-25{
   margin-left: 25%;
+}
+
+.assignment-card{
+  width : 100%;
+  margin-bottom: 20px;
+  margin-right: 20px;
+
+  
+}
+.assignment-card .mdc-card__media{
+  width : 100%;
+  height : 200px;
+  object-fit: cover;
+}
+.assignment-card .mat-mdc-card-content{
+  height : 100%;
+}
+.assignment-card .mat-mdc-card-avatar{
+  overflow: hidden;
+}
+.assignment-card .avatar{
+    width : 100%;
+    height: 100%;
+    object-fit: cover;
 }
