--- a/assignment-app-fronted/src/app/assignment/detail-assignment/detail-assignment.component.html
+++ b/assignment-app-fronted/src/app/assignment/detail-assignment/detail-assignment.component.html
@@ -80,7 +80,7 @@
                         </div>
                       </div>
                     </div>
-                </ng-template>>
+                </ng-template>
             </div>
         </div>
     </div>
