--- a/assignment-app-fronted/src/styles.css
+++ b/assignment-app-fronted/src/styles.css
@@ -6,3 +6,27 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     background-color: #4caf50; /* Vert pour les succès */
     color: white;
 }
+
+mat-sidenav-container {
+    height: 100vh; /* S'assure que le conteneur prend toute la hauteur de la vue */
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .cdkDropListGroup {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden; /* Empêche le débordement */
+  }
+  
+  .example-container {
+    flex: 1;
+    overflow-y: auto; /* Permet le défilement vertical */
+    margin-bottom: 20px; /* Ajout d'un espace en bas si nécessaire */
+  }
+  
+  .example-list {
+    padding: 0;
+    margin: 0;
+  }
