--- a/assignment-app-fronted/src/app/assignment/assignment.component.css
+++ b/assignment-app-fronted/src/app/assignment/assignment.component.css
@@ -5,7 +5,10 @@
   display: inline-block;
   vertical-align: top;
 }
-
+.paging{
+  display: flex;
+  place-content: space-evenly;
+}
 .example-list {
   border: solid 1px #ccc;
   min-height: 60px;
