--- a/assignment-app-fronted/src/app/assignment/assignment.component.html
+++ b/assignment-app-fronted/src/app/assignment/assignment.component.html
@@ -10,6 +10,18 @@
         <div class="row">
           <div class="col-6">
             <h2>Non rendue</h2>
+            <div class="example-button-container paging">
+              <div>
+                <button mat-mini-fab color="link"  [disabled]="disableprevT" (click)="prevtodo()" aria-label="Example icon button with a filter list icon">
+                  <mat-icon>keyboard_arrow_left</mat-icon>
+                </button>
+              </div>
+              <div>
+                <button mat-mini-fab color="link"  [disabled]="disablenextT" (click)="nexttodo()" aria-label="Example icon button with a filter list icon">
+                  <mat-icon>keyboard_arrow_right</mat-icon>
+                </button>
+              </div>
+            </div>
             <div cdkDropList [cdkDropListData]="todo" class="example-list" (cdkDropListDropped)="drop($event)">
               @for (item of todo; track item) {
               <div class="example-box">
@@ -42,10 +54,24 @@
                 </mat-card>
               </div>
               }
+              
             </div>
+            
           </div>
           <div class="col-6">
             <h2>Rendue</h2>
+            <div class="example-button-container paging">
+              <div>
+                <button mat-mini-fab color="link" (click)="prevrendue()" [disabled]="disableprevR" aria-label="Example icon button with a filter list icon">
+                  <mat-icon>keyboard_arrow_left</mat-icon>
+                </button>
+              </div>
+              <div>
+                <button mat-mini-fab color="link" (click)="nextrendue()" [disabled]="disablenextR" aria-label="Example icon button with a filter list icon">
+                  <mat-icon>keyboard_arrow_right</mat-icon>
+                </button>
+              </div>
+            </div>
             <div cdkDropList [cdkDropListData]="done" class="example-list" (cdkDropListDropped)="drop($event)">
               @for (item of done; track item) {
               <div class="example-box">
@@ -82,6 +108,7 @@
               </div>
               }
             </div>
+            
           </div>
         </div>
       </ng-template>
