--- a/assignment-app-fronted/src/app/assignment/assignment.component.html
+++ b/assignment-app-fronted/src/app/assignment/assignment.component.html
@@ -17,7 +17,7 @@
                 </button>
               </div>
               <div class="pagination">
-                <button type="button" class="btn btn-primary pagination-item" 
+                <button type="button" class="btn pagination-item" 
                     *ngFor="let pageNumber of pageNumbersT"
                     [class.active]="pageNumber === currentpageT" 
                     (click)="goToPageT(pageNumber)">
@@ -81,7 +81,7 @@
                   <mat-icon>keyboard_arrow_left</mat-icon>
                 </button>
                 <div class="pagination">
-                  <button type="button" class="btn btn-primary pagination-item" 
+                  <button type="button" class="btn pagination-item" 
                       *ngFor="let pageNumber of pageNumbersR"
                       [class.active]="pageNumber === currentpageR" 
                       (click)="goToPageR(pageNumber)">
